Algo de dashboard

--- a/templates/cuentas/listarCuentaPagar.html
+++ b/templates/cuentas/listarCuentaPagar.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
 
-{% block titulo %} Listar cuenta{% endblock titulo %}
+{% block titulo %} Listar cuentas {% endblock titulo %}
 
 {% block css %}
 
@@ -17,7 +17,7 @@
 
 {% endblock css %}
 
-{% block titulo_pagina %} Ver cuentas {% endblock titulo_pagina %}
+{% block titulo_pagina %} {% endblock titulo_pagina %}
 
 {% block miga_pan %}
 <li><a href="#">Cuentas por Pagar</a></li>
