--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,7 +20,12 @@
     <ul class="sidebar-menu" data-widget="tree">
       <li class="header">HEADER</li>
       <!-- Optionally, you can add icons to the links -->
-
+      <li class="treeview">
+        <a href="#"><i class="fas fa-tachometer-alt"></i> <span>Home</span></a>
+        <ul class="treeview-menu">
+          <li><a href="{% url 'index' %}">Dashboard</a></li>
+        </ul>
+      </li>
 
       <li class="treeview">
         <a href="#"><i class="fa fa-dollar"></i> <span>Cuentas por Pagar</span>
