--- a/templates/compras/crear_solicitudes.html
+++ b/templates/compras/crear_solicitudes.html
@@ -11,88 +11,101 @@
 
 
 {% block css %}
-  <style>
-    .row{
+<style>
+  .row{
       padding-left:10px;
+    }
+
+    .form-group{
+      margin-top: 5px;
     }
   </style>
 {% endblock css %}
-  
+
 
 {% block titulo %}
 Generar Solicitud de Compra
-{% endblock titulo %} 
+{% endblock titulo %}
 
 {% block titulo_pagina %}
 Generar Solicitud de Compra
-{% endblock titulo_pagina %} 
+{% endblock titulo_pagina %}
 
 {% block contenido %}
-  <div class="content-wrapper">       
-    <!-- Main content -->
-    <section class="box">          
-      <div class="col-md-12">
-        <!-- general form elements -->
-        <div class="box box-primary">                      
-          <!-- form start -->
-          <form method="POST" role="form"> {% csrf_token %}                                  
-            <div class="panel panel-default">   
-                <div class="panel-heading">
-                    <h3 class="panel-title">Nueva Solicitud</h3>                  
+<div class="content-wrapper">
+  <!-- Main content -->
+  <section class="box">
+    <div class="col-md-12">
+      <!-- general form elements -->
+      <div class="box box-primary">
+        <!-- form start -->
+        <form method="POST" role="form"> {% csrf_token %}
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Nueva Solicitud</h3>
+            </div>
+
+            <div>
+              <div class="form-group row">
+                <div class="col-xs-6">
+                  <label for="inputNombre">Nombre Solicitante</label>
+                  <input type="text" hidden name='solicitante' value="{{usuario.id}}">
+                  <input type="text" class="form-control" id="inputNombre" disabled placeholder="{{ usuario.get_full_name }}">
                 </div>
 
-                <div>
-                    <div class="form-group row">
-                        <div class="col-xs-6">
-                            <label for="inputNombre">Nombre Solicitante</label>
-                            <input type="text" class="form-control" id="inputNombre" disabled
-                            placeholder="{{ usuario.get_full_name }}">                          
-                        </div>
+                <div class="col-xs-6">
+                  <label for="inputId">Identificacion</label>
+                  <input type="text" class="form-control" id="inputId" disabled placeholder="{{ usuario.username }}">
+                </div>
+              </div>
 
-                        <div class="col-xs-6">
-                            <label for="inputId">Identificacion</label>
-                            <input type="text" class="form-control" id="inputId" disabled 
-                            placeholder="{{ usuario.username }}"> 
-                        </div>                        
-                    </div>
-
-                    <div class="row">
-                        <div class="col-xs-6">
-                            {% bootstrap_field form.articulos %}
-                   </div>
-<!-- TODO: Validar cantidad <div class="col-xs-6">
+              <div class="row">
+                <div class="col-xs-6">
+                  {% bootstrap_field form.articulos %}
+                </div>
+                <!-- TODO: Validar cantidad <div class="col-xs-6">
                             <label for="inputCantidad">Cantidad</label>
                             <input type="text" class="form-control" id="inputCantidad">                        
                         </div> -->
-                    </div>
+              </div>
 
-                    <div class="row">                        
-                        <div class="col-xs-6">
-                            <!-- Date -->                            
-                            {% bootstrap_field form.fecha_esperada %}
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class=" col-xs-12">
-                            {% bootstrap_field form.justificacion %}
-                        </div>
-                    </div>
+              <div class="row">
+                <div class="col-xs-6">
+                  <!-- Date -->
+                  {% bootstrap_field form.fecha_esperada %}
                 </div>
-                
-                <div class="box-footer text-center">
-                    <button type="submit" class="btn btn-success">Guardar Solicitud</button>
-                    <button type="reset" class="btn btn-danger">Cancelar</button>
-                </div> 
-            <!-- panel -->                                               
-            </div>     
-          </form>          
-          <!-- /.box-body -->
-        </div>
-        <!-- /.box -->
-      </div>                  
-    </section>
-    <!-- /.content -->
-  </div>
-  <!-- /.content-wrapper -->
+              </div>
+
+              <div class="row">
+                <div class=" col-xs-12">
+                  {% bootstrap_field form.justificacion %}
+                </div>
+              </div>
+
+              <div class="row" hidden>
+                  <div class=" col-xs-12">
+                    {% bootstrap_field form.estado_aprobacion %}
+                  </div>
+                </div>
+            </div>
+            {% for field in form %}
+            {% for error in field.errors %}
+            <p style="color: red">{{field.label}}: {{ error }}</p>
+            {% endfor %}
+            {% endfor %}
+            <div class="box-footer text-center">
+              <button type="submit" class="btn btn-success">Guardar Solicitud</button>
+              <button type="reset" class="btn btn-danger">Cancelar</button>
+            </div>
+            <!-- panel -->
+          </div>
+        </form>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+    </div>
+  </section>
+  <!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
 {% endblock contenido %}
