feat: gestion de datos

--- a/apps/datosmaestros/templates/datosmaestros/categoria_crear.html
+++ b/apps/datosmaestros/templates/datosmaestros/categoria_crear.html
@@ -16,7 +16,7 @@ Crear categoria de Datos Maestros
 
 {% block miga_pan %}
 <li><a><i class="fa fa-dashboard"></i> Dashboard</a></li>
-<li><a href="{% url 'datosmaestros:listar_categoria' %}">Gestionar categorias</a></li>
+<li><a href="{% url 'datosmaestros:listar_categorias' %}">Gestionar categorias</a></li>
 <li class="active">Crear categoria</li>
 {% endblock miga_pan %}
 
