--- a/apps/datosmaestros/templates/datosmaestros/dato_listar.html
+++ b/apps/datosmaestros/templates/datosmaestros/dato_listar.html
@@ -6,16 +6,17 @@ Datos Maestros
 {% endblock titulo %}
 
 {% block titulo_pagina %}
-Gestión de categorias
+Gestión de datos
 {% endblock titulo_pagina %}
 
 {% block descripcion_pagina %}
-Gestiona las categorias de Datos Maestros
+Gestiona los datos de Datos Maestros
 {% endblock descripcion_pagina %}
 
 {% block miga_pan %}
 <li><a><i class="fa fa-dashboard"></i> Dashboard</a></li>
-<li class="active">Gestión de categorias</li>
+<li><a href="{% url 'datosmaestros:listar_categorias' %}">Gestión de categorias</a></li>
+<li class="active">Gestión de datos</li>
 {% endblock miga_pan %}
 
 {% block css %}
@@ -26,29 +27,33 @@ Gestiona las categorias de Datos Maestros
 <div class="col-md-12">
   <div class="box box-primary">
     <div class="box-header">
-      <h3 class="box-title">Listado de categorias</h3>
-      <a type="button" class="btn btn-success" href="{% url 'datosmaestros:crear_categoria' %}"><i class="fa fa-plus-circle"></i> Crear categoria<div class="ripple-container"></div></a>
+      <h3 class="box-title">
+        Listado de datos | Categoría: <strong>{{ categoria.nombre }}</strong>
+      </h3>
+      <a type="button" class="btn btn-success" href="{% url 'datosmaestros:crear_dato' categoria.id %}"><i class="fa fa-plus-circle"></i> Crear dato<div class="ripple-container"></div></a>
     </div>
     <div class="box-body">
-      <table id="tabla_categorias" class="table table-striped table-bordered">
+      <table id="tabla_datos" class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>Nombre</th>
             <th>Descripción</th>
+            <th>Tipo</th>
             <th>Estado</th>
             <th>Acciones</th>
           </tr>
         </thead>
         <tbody>
-          {% for categoria in categorias %}
+          {% for dato in datos %}
           <tr>
-            <td>{{ categoria.nombre }}</td>
-            <td>{{ categoria.descripcion }}</td>
+            <td>{{ dato.nombre }}</td>
+            <td>{{ dato.descripcion }}</td>
+            <td>{{ dato.tipo }}</td>
             <td>
-              {%  if categoria.estado %}
-              <span class="badge bg-green">Activa</span>
+              {%  if dato.estado %}
+              <span class="badge bg-green">Activo</span>
               {% else %}
-              <span class="badge bg-red">Inactiva</span>
+              <span class="badge bg-red">Inactivo</span>
               {% endif %}
             </td>
             <td>
@@ -60,24 +65,22 @@ Gestiona las categorias de Datos Maestros
                 </button>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="{% url 'datosmaestros:listar_datos' categoria.id %}">Datos</a>
-                  </li>
-                  <li>
-                    <a href="{% url 'datosmaestros:editar_categoria' categoria.id %}">Editar</a>
+                    <a href="{% url 'datosmaestros:editar_dato' id_categoria=categoria.id id_dato=dato.id %}">Editar</a>
                   </li>
                   <li>
                     <a href="#modal-detalle" data-toggle="modal"
-                    data-nombre="{{ categoria.nombre }}"
-                    data-descripcion="{{ categoria.descripcion }}"
-                    data-estado="{% if categoria.estado %} Activa {% else %} Inactiva {% endif %}">
+                    data-nombre="{{ dato.nombre }}"
+                    data-descripcion="{{ dato.descripcion }}"
+                    data-tipo="{{ dato.tipo }}"
+                    data-estado="{% if dato.estado %} Activo {% else %} Inactivo {% endif %}">
                     Detalle</a>
                   </li>
                   <li>
                     <a href="#modal-eliminar" data-toggle="modal"
-                    data-id="{{ categoria.id }}"
-                    data-nombre="{{ categoria.nombre }}"
-                    data-estado="{% if categoria.estado %} Desactivar {% else %} Activar {% endif %}">
-                    {% if categoria.estado %} Desactivar {% else %} Activar {% endif %}</a>
+                    data-id="{{ dato.id }}"
+                    data-nombre="{{ dato.nombre }}"
+                    data-estado="{% if dato.estado %} Desactivar {% else %} Activar {% endif %}">
+                    {% if dato.estado %} Desactivar {% else %} Activar {% endif %}</a>
                   </li>
                 </ul>
               </div>
@@ -94,13 +97,14 @@ Gestiona las categorias de Datos Maestros
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i></button>
-        <h3 class="modal-title">Detalle de categoria</h3>
+        <h3 class="modal-title">Detalle de dato</h3>
       </div>
       <div class="modal-body">
         <div class="row">
           <div class="col-md-12">
             <h5>Nombre: </h5><p class="nombre"></p>
             <h5>Descripción: </h5><p class="descripcion"></p>
+            <h5>Tipo: </h5><p class="tipo"></p>
             <h5>Estado: </h5><p class="estado"></p>
           </div>
         </div>
@@ -124,7 +128,7 @@ Gestiona las categorias de Datos Maestros
         <div class="row">
           <div class="col-md-12">
             <p>
-              ¿Esta seguro que desea <span class="estado"></span> la cateroria: <span class="nombre"></span>?
+              ¿Esta seguro que desea <span class="estado"></span> el dato: <span class="nombre"></span>?
             </p>
           </div>
         </div>
@@ -141,17 +145,19 @@ Gestiona las categorias de Datos Maestros
 {% block js %}
 <script src="{% static 'bower_components/datatables.net/js/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js' %}"></script>
-<script>$(function () { $('#tabla_categorias').DataTable({ responsive: true }) })</script>
+<script>$(function () { $('#tabla_datos').DataTable({ responsive: true }) })</script>
 <script>
 $('#modal-detalle').on('show.bs.modal', function (event) {
   var info = $(event.relatedTarget)
   var nombre = info.data('nombre')
   var descripcion = info.data('descripcion')
   var estado = info.data('estado')
+  var tipo = info.data('tipo')
   var modal = $(this)
   modal.find('.modal-body .nombre').text(nombre)
   modal.find('.modal-body .descripcion').text(descripcion)
   modal.find('.modal-body .estado').text(estado)
+  modal.find('.modal-body .tipo').text(tipo)
 });
 $('#modal-eliminar').on('shown.bs.modal', function (event) {
   var info = $(event.relatedTarget)
@@ -164,7 +170,7 @@ $('#modal-eliminar').on('shown.bs.modal', function (event) {
   modal.find('.modal-body .estado').text(estado)
   $('#eliminar').click(function () {
     $.post(
-      "{% url 'datosmaestros:eliminar_categoria' %}",
+      "{% url 'datosmaestros:eliminar_dato' categoria.id %}",
       { "csrfmiddlewaretoken":'{{ csrf_token }}', "id": id },
       function (data) {
         window.location.href = data.url;
