--- a/templates/compras/lista_solicitudes.html
+++ b/templates/compras/lista_solicitudes.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block miga_pan %}
 <li><a href="#"><i class="fa fa-dashboard"></i> Inicio</a></li>
@@ -31,56 +32,57 @@ Solicitudes de Compra
 
                 <div class="panel-heading">
                   <h3 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#acordion" href="#collapse1">
-                      Solucitud #{{solicitud.codigo}}
+                    <a data-toggle="collapse" data-parent="#acordion" href="#collapse{{solicitud.id}}">
+                      Solucitud #{{solicitud.id}}
                     </a>
                     <i class="fa fa-circle text-yellow"></i> <!-- cambia color con el estado -->
                   </h3>
-                </div>                    
+                </div>
 
-                <div id="collapse1" class="panel-collapse collapse">
+                <div id="collapse{{solicitud.id}}" class="panel-collapse collapse">
                   <div class="form-group row">
                     <div class="col-xs-6">
                       <label for="inputNombre">Nombre Solicitante</label>
-                      <input type="text" class="form-control" id="inputNombre" disabled>                          
+                      <input type="text" class="form-control" id="inputNombre" disabled value="{{solicitud.solicitante.get_full_name}}">
                     </div>
 
                     <div class="col-xs-3">
                       <label for="inputId">Identificacion</label>
-                      <input type="text" class="form-control" id="inputId" disabled 
-                        placeholder={{solicitud.solicitante}}> 
-                    </div>                        
-                  </div>
-
-                  <div class="form-group">
-                    <label for="inputElemento">Elemento requerido</label>
-                    <input type="text" class="form-control" id="inputElemento" disabled
-                      placeholder={{articulossolicitud.articulo.nombre}}>                        
-                  </div>
-
-                  <div class="form-group">
-                    <label for="inputCantidad">Cantidad</label>
-                    <input type="text" class="form-control" id="inputCantidad" disabled
-                      placeholder={{articulossolicitud.cantidad}}>                        
-                  </div>
-
-                  <div class="form-group row">                        
-                    <div class="form-group col-xs-6">
-                      <label for="exampleInputFile">Fecha esperada</label>                  
-                      <!-- Date -->                            
-                      <input type="text" class="form-control pull-right" id="datepicker" disabled
-                        placeholder={{solicitud.fecha_esperada}}>
+                      <input type="text" class="form-control" id="inputId" disabled placeholder={{solicitud.solicitante}}>
                     </div>
                   </div>
 
-                  <div class="form-group">
-                    <label for="inputJust">Justificacion</label>
-                    <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="7" cols="50" readonly>
+                  <div class="form-group row">
+                    <div class="col-xs-6">
+                      <label for="inputElemento">Articulos requeridos</label>
+                      <ul>
+                        {% for articulo in solicitud.articulos.all %}
+                        <li> {{articulo.nombre}} </li>
+                        {% endfor %}
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="form-group row">
+                    <div class=" col-xs-6">
+                      <label for="exampleInputFile">Fecha esperada</label>
+                      <!-- Date -->
+                      <input disabled class="form-control pull-right datepicker" value="{{ solicitud.fecha_esperada}}"
+                        autocomplete="off">
+                    </div>
+                  </div>
+
+                  <div class="form-group row">
+                    <div class=" col-xs-6">
+                      <label for="inputJust">Justificacion</label>
+                      <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="1" cols="50"
+                        readonly>
                       {{solicitud.justificacion}}
                     </textarea>
+                    </div>
                   </div>
-                <!-- collapse --> 
-                </div>   
+                  <!-- collapse -->
+                </div>
               </div>
             </div>
             {% endfor %}
@@ -99,7 +101,7 @@ Solicitudes de Compra
       <!-- /.box -->
     </div>
 
-{% if usuario.rol == 'jefe_compras' or  usuario.rol == 'gerente' %}
+    {% if usuario.rol == 'jefe_compras' or usuario.rol == 'gerente' %}
 
     <div class="col-md-12">
       <!-- general form elements -->
@@ -112,71 +114,63 @@ Solicitudes de Compra
           <div class="container col-md-12">
             {% for solicitud in solicitudes_autorizar %}
             <div class="panel-group" id="accordion">
-              <div class="panel panel-default">
-
-                <div class="panel-heading">
-                  <h3 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#acordion" href="#collapse1">
-                      Solucitud #{{solicitud.codigo}}
-                    </a>
-                    <i class="fa fa-circle text-yellow"></i> <!-- cambia color con el estado -->
-                  </h3>
+                <div class="panel panel-default">
+  
+                  <div class="panel-heading">
+                    <h3 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#acordion" href="#collapse{{solicitud.id}}">
+                        Solucitud #{{solicitud.id}}
+                      </a>
+                      <i class="fa fa-circle text-yellow"></i> <!-- cambia color con el estado -->
+                    </h3>
+                  </div>
+  
+                  <div id="collapse{{solicitud.id}}" class="panel-collapse collapse">
+                    <div class="form-group row">
+                      <div class="col-xs-6">
+                        <label for="inputNombre">Nombre Solicitante</label>
+                        <input type="text" class="form-control" id="inputNombre" disabled value="{{solicitud.solicitante.get_full_name}}">
+                      </div>
+  
+                      <div class="col-xs-3">
+                        <label for="inputId">Identificacion</label>
+                        <input type="text" class="form-control" id="inputId" disabled placeholder={{solicitud.solicitante}}>
+                      </div>
+                    </div>
+  
+                    <div class="form-group row">
+                      <div class="col-xs-6">
+                        <label for="inputElemento">Articulos requeridos</label>
+                        <ul>
+                          {% for articulo in solicitud.articulos.all %}
+                          <li> {{articulo.nombre}} </li>
+                          {% endfor %}
+                        </ul>
+                      </div>
+                    </div>
+  
+                    <div class="form-group row">
+                      <div class=" col-xs-6">
+                        <label for="exampleInputFile">Fecha esperada</label>
+                        <!-- Date -->
+                        <input disabled class="form-control pull-right datepicker" value="{{ solicitud.fecha_esperada}}"
+                          autocomplete="off">
+                      </div>
+                    </div>
+  
+                    <div class="form-group row">
+                      <div class=" col-xs-6">
+                        <label for="inputJust">Justificacion</label>
+                        <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="1" cols="50"
+                          readonly>
+                        {{solicitud.justificacion}}
+                      </textarea>
+                      </div>
+                    </div>
+                    <!-- collapse -->
+                  </div>
                 </div>
-
-                <div id="collapse1" class="panel-collapse collapse">
-                  <div class="form-group row">
-                    <div class="col-xs-6">
-                      <label for="inputNombre">Nombre Solicitante</label>
-                      <input type="text" class="form-control" id="inputNombre" disabled
-                        placeholder={{solicitud.solicitante}}>
-                    </div>
-
-                    <div class="col-xs-3">
-                      <label for="inputId">Identificacion</label>
-                      <input type="text" class="form-control" id="inputId" disabled 
-                        placeholder={{solicitud.solicitante}}>                      
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <label for="inputElemento">Elemento requerido</label>
-                    <input type="text" class="form-control" id="inputElemento" disabled 
-                      placeholder={{articulossolicitud.articulo.nombre}}>
-                  </div>
-
-                  <div class="form-group">
-                    <label for="inputCantidad">Cantidad</label>
-                    <input type="text" class="form-control" id="inputCantidad" disabled 
-                      placeholder={{articulossolicitud.cantidad}}>
-                  </div>
-
-                  <div class="form-group row">
-                    <div class="form-group col-xs-6">
-                      <label for="exampleInputFile">Fecha realizacion</label>
-                      <!-- Date -->
-                      <input type="text" class="form-control pull-right" id="datepicker" disabled 
-                        placeholder={{solicitud.fecha_realizada}}>                      
-                    </div>
-
-                    <div class="form-group col-xs-6">
-                      <label for="exampleInputFile">Fecha esperada</label>
-                      <!-- Date -->
-                      <input type="text" class="form-control pull-right" id="datepicker" disabled 
-                        placeholder={{solicitud.fecha_esperada}}>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <label for="inputJust">Justificacion</label>
-                    <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="7" cols="50" readonly>
-                      {{solicitud.justificacion}}
-                    </textarea>
-                  </div>
-                  <!-- collapse -->
-                </div>
-                <!-- panel -->
               </div>
-            </div>
             {% endfor %}
           </div>
           {% else %}
@@ -189,8 +183,8 @@ Solicitudes de Compra
       </div>
       <!-- /.box -->
     </div>
-{% endif %}
-  
+    {% endif %}
+
   </section>
   <!-- /.content -->
 </div>
