--- a/apps/datosmaestros/templates/datosmaestros/valor_listar.html
+++ b/apps/datosmaestros/templates/datosmaestros/valor_listar.html
@@ -6,17 +6,18 @@ Datos Maestros
 {% endblock titulo %}
 
 {% block titulo_pagina %}
-Gestión de datos
+Gestión de valores
 {% endblock titulo_pagina %}
 
 {% block descripcion_pagina %}
-Gestiona los datos de Datos Maestros
+Gestiona los valores de Datos Maestros
 {% endblock descripcion_pagina %}
 
 {% block miga_pan %}
 <li><a><i class="fa fa-dashboard"></i> Dashboard</a></li>
 <li><a href="{% url 'datosmaestros:listar_categorias' %}">Gestión de categorias</a></li>
-<li class="active">Gestión de datos</li>
+<li><a href="{% url 'datosmaestros:listar_datos' categoria.id %}">Gestión de datos</a></li>
+<li class="active">Gestión de valores</li>
 {% endblock miga_pan %}
 
 {% block css %}
@@ -28,10 +29,11 @@ Gestiona los datos de Datos Maestros
   <div class="box box-primary">
     <div class="box-header">
       <h3 class="box-title">
-        Listado de datos
+        Listado de valores
         | Categoría: <strong>{{ categoria.nombre }}</strong>
+        | Dato: <strong>{{ dato.nombre }}</strong>
       </h3>
-      <a type="button" class="btn btn-success" href="{% url 'datosmaestros:crear_dato' categoria.id %}"><i class="fa fa-plus-circle"></i> Crear dato<div class="ripple-container"></div></a>
+      <a type="button" class="btn btn-success" href="{% url 'datosmaestros:crear_valor' id_categoria=categoria.id id_dato=dato.id %}"><i class="fa fa-plus-circle"></i> Crear valor<div class="ripple-container"></div></a>
     </div>
     <div class="box-body">
       <table id="tabla_datos" class="table table-striped table-bordered">
@@ -39,19 +41,19 @@ Gestiona los datos de Datos Maestros
           <tr>
             <th>Nombre</th>
             <th>Descripción</th>
-            <th>Tipo</th>
+            <th>Valor</th>
             <th>Estado</th>
             <th>Acciones</th>
           </tr>
         </thead>
         <tbody>
-          {% for dato in datos %}
+          {% for valor in valores %}
           <tr>
-            <td>{{ dato.nombre }}</td>
-            <td>{{ dato.descripcion }}</td>
-            <td>{{ dato.tipo }}</td>
+            <td>{{ valor.nombre }}</td>
+            <td>{{ valor.descripcion }}</td>
+            <td>{{ valor.valor }}</td>
             <td>
-              {%  if dato.estado %}
+              {%  if valor.estado %}
               <span class="badge bg-green">Activo</span>
               {% else %}
               <span class="badge bg-red">Inactivo</span>
@@ -66,25 +68,22 @@ Gestiona los datos de Datos Maestros
                 </button>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="{% url 'datosmaestros:listar_valores' id_categoria=categoria.id id_dato=dato.id %}">Valores</a>
-                  </li>
-                  <li>
-                    <a href="{% url 'datosmaestros:editar_dato' id_categoria=categoria.id id_dato=dato.id %}">Editar</a>
+                    <a href="{% url 'datosmaestros:editar_valor' id_categoria=categoria.id id_dato=dato.id id_valor=valor.id %}">Editar</a>
                   </li>
                   <li>
                     <a href="#modal-detalle" data-toggle="modal"
-                    data-nombre="{{ dato.nombre }}"
-                    data-descripcion="{{ dato.descripcion }}"
-                    data-tipo="{{ dato.tipo }}"
-                    data-estado="{% if dato.estado %} Activo {% else %} Inactivo {% endif %}">
+                    data-nombre="{{ valor.nombre }}"
+                    data-descripcion="{{ valor.descripcion }}"
+                    data-valor="{{ valor.valor }}"
+                    data-estado="{% if valor.estado %} Activo {% else %} Inactivo {% endif %}">
                     Detalle</a>
                   </li>
                   <li>
                     <a href="#modal-eliminar" data-toggle="modal"
-                    data-id="{{ dato.id }}"
-                    data-nombre="{{ dato.nombre }}"
-                    data-estado="{% if dato.estado %} Desactivar {% else %} Activar {% endif %}">
-                    {% if dato.estado %} Desactivar {% else %} Activar {% endif %}</a>
+                    data-id="{{ valor.id }}"
+                    data-nombre="{{ valor.nombre }}"
+                    data-estado="{% if valor.estado %} Desactivar {% else %} Activar {% endif %}">
+                    {% if valor.estado %} Desactivar {% else %} Activar {% endif %}</a>
                   </li>
                 </ul>
               </div>
@@ -101,14 +100,14 @@ Gestiona los datos de Datos Maestros
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i></button>
-        <h3 class="modal-title">Detalle de dato</h3>
+        <h3 class="modal-title">Detalle de valor</h3>
       </div>
       <div class="modal-body">
         <div class="row">
           <div class="col-md-12">
             <h5>Nombre: </h5><p class="nombre"></p>
             <h5>Descripción: </h5><p class="descripcion"></p>
-            <h5>Tipo: </h5><p class="tipo"></p>
+            <h5>Valor: </h5><p class="valor"></p>
             <h5>Estado: </h5><p class="estado"></p>
           </div>
         </div>
@@ -132,7 +131,7 @@ Gestiona los datos de Datos Maestros
         <div class="row">
           <div class="col-md-12">
             <p>
-              ¿Esta seguro que desea <span class="estado"></span> el dato: <span class="nombre"></span>?
+              ¿Esta seguro que desea <span class="estado"></span> el valor: <span class="nombre"></span>?
             </p>
           </div>
         </div>
@@ -156,12 +155,12 @@ $('#modal-detalle').on('show.bs.modal', function (event) {
   var nombre = info.data('nombre')
   var descripcion = info.data('descripcion')
   var estado = info.data('estado')
-  var tipo = info.data('tipo')
+  var valor = info.data('valor')
   var modal = $(this)
   modal.find('.modal-body .nombre').text(nombre)
   modal.find('.modal-body .descripcion').text(descripcion)
   modal.find('.modal-body .estado').text(estado)
-  modal.find('.modal-body .tipo').text(tipo)
+  modal.find('.modal-body .valor').text(valor)
 });
 $('#modal-eliminar').on('shown.bs.modal', function (event) {
   var info = $(event.relatedTarget)
@@ -174,7 +173,7 @@ $('#modal-eliminar').on('shown.bs.modal', function (event) {
   modal.find('.modal-body .estado').text(estado)
   $('#eliminar').click(function () {
     $.post(
-      "{% url 'datosmaestros:eliminar_dato' categoria.id %}",
+      "{% url 'datosmaestros:eliminar_valor' id_categoria=categoria.id id_dato=dato.id %}",
       { "csrfmiddlewaretoken":'{{ csrf_token }}', "id": id },
       function (data) {
         window.location.href = data.url;
