--- a/templates/compras/crear_ordenes.html
+++ b/templates/compras/crear_ordenes.html
@@ -24,30 +24,28 @@
                 <div class="col-xs-6">
                   <label for="inputNombre">Nombre</label>
                   <input type="text" class="form-control" id="inputNombre" 
-                    placeholder={{usario.nombre}} disabled>
+                    value={{usario.nombre}} disabled>
                 </div>
 
                 <div class="col-xs-3">
                   <label for="inputId">Identificación</label>
                   <input type="text" class="form-control" id="inputId" disabled
-                    placeholder={{usuario.codigo}}>
+                    value={{usuario.codigo}}>
                 </div>
 
                 <div class="col-xs-3">
                   <label for="inputNombre">Cargo</label>
                   <input type="text" class="form-control" id="inputNombre" disabled
-                    placeholder={{usuario.rol}}>
+                  value={{usuario.rol}}>
                 </div>
               </div> 
                             
               <div class="tab-content">
-                {% if cotizaciones %}
-                {% for cotizacion in cotizaciones %}
                 <div id="cotizaciones" class="tab-pane fade in active">                      
                   <div class="panel-group" id="accordion">  
                     <div class="panel panel-default">                                                                      
                       <div class="panel-heading">
-                        <h3 class="panel-title">Cotización #{{cotizacion.codigo}}</h3>                  
+                        <h3 class="panel-title">Orden de Compra #{{ordencompra.codigo}}</h3>                  
                       </div>
 
                       <div class="form-group">
@@ -55,62 +53,66 @@
                           <div class="col-xs-6">
                             <label for="inputNombre">Nombre Proveedor</label>
                             <input type="text" class="form-control" id="inputNombre" disabled
-                              value={{proveedor.nombre}}> 
+                              placeholder={{proveedor.nombre}}> 
                           </div>
 
                           <div class="col-xs-3">
                             <label for="inputId">Identificación</label>
                             <input type="text" class="form-control" id="inputId" disabled
-                              value={{proveedor.codigo}}>
+                              placeholder={{proveedor.codigo}}>
                           </div>                          
                         </div>
 
                         <div class="form-group">
-                          <label for="inputElemento">Elemento</label>
-                          <input type="text" class="form-control" id="inputElemento" disabled
-                            value={{articuloscotizacion.articulo.nombre}}>
-                        </div>                        
+                            <div class="form-group">
+                                <label for="inputElemento">Elemento</label>
+                                {% bootstrap_field form.articulos %}
+                            </div>                        
 
-                        <div class="form-group">
-                          <label for="inputCantidad">Cantidad</label>
-                          <input type="text" class="form-control" id="inputCantidad" disabled
-                            value={{articuloscotizacion.cantidad}}>
+                            <div class="form-group">
+                                <label for="inputCantidad">Cantidad</label>
+                                <input type="text" class="form-control" id="inputCantidad" disabled
+                                    placeholder={{articuloscotizacion.cantidad}}>
+                            </div>
                         </div>
 
                         <div class="form-group row">
-                          <div class="form-group col-xs-6">
-                            <label for="datepicker">Fecha realizada</label>                  
-                            <!-- Date -->                              
-                            <input type="text" class="form-control pull-right" id="datepicker" disabled
-                              value={{cotizacion.fecha_realizada}}>
-                          </div>
+                            <div class="form-group col-xs-6">
+                                <label for="datepicker">Fecha realizada</label>                  
+                                <!-- Date -->                              
+                                <input type="text" class="form-control pull-right" id="datepicker" disabled
+                                    placeholder={{ordencompra.fecha_realizada}}>
+                            </div>
+
+                            <div class="form-group col-xs-6">
+                                <label for="datepicker">Fecha esperada</label>                  
+                                <!-- Date -->                              
+                                {% bootstrap_field form.fecha_esperada %}
+                            </div>
                         </div> <!-- group row -->
 
                         <div class="form-group row">                              
                           <div class="form-group col-xs-6">
                             <label for="inputValorU">Valor unidad $</label>
                             <input type="text" class="form-control" id="inputValorU" disabled
-                              value={{articuloscotizacion.precio}}>
+                              placeholder={{articuloscotizacion.precio}}>
                           </div> 
 
                           <div class="form-group col-xs-6">
                             <label for="inputValorT">Valor Total $</label>       
                             <input type="text" class="form-control pull-right" id="inputValorT" disabled
-                              value={{cotizacion.total}}>
+                              placeholder={{cotizacion.total}}>
                           </div>                            
-                        </div> <!-- group row --> 
+                        </div> 
+                        
                       </div> <!--collapse-->   
                     </div> <!--panel-->
 
                     <div class="box-footer text-center">
-                      <a href="{% url 'compras:cotizacion_crear' %}" class="btn btn-success">Nueva Cotización</a>
-                      <a href="{% url 'compras:cotizacion_modificar' %}" class="btn btn-primary">Modificar Cotización</a>                      
+                      <button type="submit" class="btn btn-success">Guardar Cotización</button>
+                      <button type="reset" class="btn btn-danger">Cancelar</button>
                     </div> 
                   </div> <!--accordion-->
-                {% endfor %}
-                {% else %}
-                  <h3>No hay cotizaciones</h3>
-                {% endif %}
                 </div>                                
               </div> <!--tab content-->
             </div>
