Fecha Creación/Atención + Timeline
- Se agregan los campos de fecha_creacion y fecha_atencion
- El campo de fecha_creacion tiene por defecto datetime.now
- Se modifica el formulario de crear orden de servicio agregando el campo de fecha_atencion
- El campo de comentarios se modificó como un TextArea
- Se manejan más boxes dependiendo del login y se cambian colores
- Mejoras minimas a consultas a la base de datos en el metodo manage_options

Se recomienda hacer
- python manage.py makemigrations ordenes_servicio
- python manage.py migrate

--- a/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
@@ -58,9 +58,14 @@
                   {% bootstrap_field form.valor%}
                 </div>
               <div class="col-sm-6">
-                {% bootstrap_field form.comentarios%}
+                {% bootstrap_field form.fecha_atencion%}
               </div>
           </div>
+            <div class="row">
+                <div class="col-md-12">
+                    {% bootstrap_field form.comentarios%}
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-12">
                     <button type="submit" class="btn btn-success bg-olive-active pull-right">Registrar</button>
