modificaciones de estilo de codigo

--- a/templates/compras/crear_solicitudes.html
+++ b/templates/compras/crear_solicitudes.html
@@ -61,12 +61,10 @@ Generar Solicitud de Compra
 
               <div class="row">
                 <div class="col-xs-6">
-                  {% bootstrap_field form.articulos %}
+                  {% bootstrap_field form.articulo %}
+                  {% bootstrap_field form.cantidad %}
                 </div>
-                <!-- TODO: Validar cantidad <div class="col-xs-6">
-                            <label for="inputCantidad">Cantidad</label>
-                            <input type="text" class="form-control" id="inputCantidad">                        
-                        </div> -->
+
               </div>
 
               <div class="row">
