--- a/apps/usuarios/templates/usuarios/crear_usuario.html
+++ b/apps/usuarios/templates/usuarios/crear_usuario.html
@@ -21,7 +21,7 @@
 
 {% block contenido_panel %}
 
-<form method="post" role="form">
+<form method="post" role="form" onsubmit="return validacion()">
     {% csrf_token %}
 
     <div class="row">
@@ -101,4 +101,5 @@
     $('#id_fecha_nacimiento').inputmask('dd/mm/yyyy', { 'placeholder': 'dd/mm/yyyy' })
 </script>
 {{ form.media.js }}
+<script src="{% static 'dist/js/validacion_crear_usuario.js' %}"></script>
 {% endblock js %}
