--- a/apps/usuarios/templates/usuarios/editar_cargo.html
+++ b/apps/usuarios/templates/usuarios/editar_cargo.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
 
-{% block titulo_pagina %}Crear Cargo{% endblock titulo_pagina %}
+{% block titulo_pagina %}Editar Cargo{% endblock titulo_pagina %}
 {% block titulo %}Gestión de Cargos{% endblock titulo %}
 {% block descripcion_pagina %} Gestiona los Cargos de ERPAdmin {% endblock descripcion_pagina %}
 {% block miga_pan %}
@@ -31,7 +31,7 @@
     {% endfor %}
 {% endblock contenido_panel %}
 {% block pie_panel %}
-    <button type="submit" class="btn btn-raised btn-success">Crear Cargo</button>
+    <button type="submit" class="btn btn-raised btn-success">Guardar Cargo</button>
 </form>
 {% endblock pie_panel %}
 
