--- a/apps/usuarios/templates/usuarios/consultar_cargos.html
+++ b/apps/usuarios/templates/usuarios/consultar_cargos.html
@@ -19,7 +19,7 @@
     <div class="box box-primary">
         <div class="box-header">
             <h3 class="box-title">Listado de Cargos</h3>
-                <a type="button" class="btn btn-success" href="{% url 'usuarios:crear_cargo' %}"><i class="fa fa-plus-circle"></i> CREAR CARGO<div class="ripple-container"></div></a>
+                <a type="button" class="btn btn-success btn-raised" href="{% url 'usuarios:crear_cargo' %}"><i class="fa fa-plus-circle"></i> CREAR CARGO<div class="ripple-container"></div></a>
         </div>
         <div class="box-body">
             <table id="tabla_cargos" class="table table-striped table-bordered">
