--- a/apps/usuarios/templates/usuarios/home.html
+++ b/apps/usuarios/templates/usuarios/home.html
@@ -8,40 +8,60 @@
 
 {% block contenido %}
 
-    <div class="row">
-        <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
-          <div class="small-box bg-aqua">
-            <div class="inner">
-              <h3>.</h3>
+<div class="row">
+{% if perms.usuarios %}
+        <div class="col-md-4">
 
-              <p>Módulo Cargos</p>
+        <div class="box box-widget widget-user-2">
+
+            <div class="widget-user-header bg-yellow">
+                <h3 class="widget-user-username">Módulo de usuarios</h3>
+                <h5 class="widget-user-desc">Gestión de usuarios</h5>
             </div>
-            <div class="icon">
-              <i class="fa fa-users"></i>
+
+            <div class="box-footer no-padding">
+                <ul class="nav nav-stacked">
+
+                    {% if perms.usuarios.add_usuario %}
+                    <li><a href="{% url 'usuarios:crear_usuario' %}">Crear usuario <span class="pull-right badge bg-blue"><i class="fa fa-user-plus"></i></span></a></li>
+                    {% endif %}
+
+                    {% if 'usuarios.change_usuario' in perms %}
+                    <li><a href="{% url 'usuarios:consultar_usuarios' %}">Consultar usuarios <span class="pull-right badge bg-green"><i class="fa fa-search"></i></span></a></li>
+                    {% endif %}
+
+                    {% if perms.usuarios.add_cargo %}
+                    <li><a href="{% url 'usuarios:crear_cargo' %}">Crear cargo <span class="pull-right badge bg-blue"><i class="fa fa-users"></i></span></a></li>
+                    {% endif %}
+
+                    {% if perms.usuarios.view_cargos %}
+                    <li><a href="{% url 'usuarios:consultar_cargos' %}">Consultar cargos <span class="pull-right badge bg-green"><i class="fa fa-search"></i></span></a></li>
+                    {% endif %}
+                </ul>
             </div>
-            <a href="{% url 'usuarios:consultar_cargos' %}" class="small-box-footer">Más informacion <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
         </div>
-        <!-- ./col -->
+    </div>
+{% endif %}
+</div>
 
-        <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
-          <div class="small-box bg-yellow">
-            <div class="inner">
-              <h3>44</h3>
 
-              <p>Módulo Usuarios</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-person-add"></i>
-            </div>
-            <a href="{% url 'usuarios:consultar_usuarios' %}" class="small-box-footer">Más información <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
+{% if user.is_superuser %}
+{% else %}
+<div class="col-md-12">
+    <div class="box box-primary">
+        <div class="box-header">
+            <h3 class="box-title">Permisos asignados</h3>
+            <div class="ripple-container"></div>
         </div>
-        <!-- ./col -->
-
-      </div>
+        <div class="box-body">
+            <ul>
+                {% for permiso in user.cargo.permissions.all %}
+                <li>{{ permiso.name }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
+{% endif %}
 
 {% endblock contenido %}
