--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="{% url 'usuarios:home' %}" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini">E<b>R</b>P</span>
             <!-- logo for regular state and mobile devices -->
