--- a/templates/control_bar.html
+++ b/templates/control_bar.html
@@ -103,16 +103,15 @@
               <!-- The user image in the navbar-->
               <!--<img src="dist/img/user-160x160.jpg" class="user-image" alt="User Image">-->
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Thanh Nguyen</span>
+              <span class="hidden-xs">{% if user.is_superuser %}admin{% else %}{{ user.get_full_name }}{% endif %}</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
                 <!-- <img src="dist/img/user-160x160.jpg" class="img-circle" alt="User Image">-->
-
                 <p>
-                  {{ user.get_full_name }}
-                  <small>{{ user.cargo }}</small>
+                  {% if user.is_superuser %}admin{% else %}{{ user.username }}{% endif %}
+                  <small>{% if user.is_superuser %}Administrador{% else %}{{ user.cargo }}{% endif %}</small>
                 </p>
               </li>
               <!-- Menu Body -->
