--- a/templates/compras/listar_cotizaciones.html
+++ b/templates/compras/listar_cotizaciones.html
@@ -1,125 +1,127 @@
 {% extends 'base.html' %}
 
 {% block miga_pan %}
-  <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-  <li><a href="#">Compras</a></li>
-  <li class="active">Solicitudes de Compra</li>
-  <li class="active">Cotizaciones</li>
+<li><a href="#"><i class="fa fa-dashboard"></i> Inicio</a></li>
+<li><a href="{% url 'compras:index' %}">Compras</a></li>
+<li><a href="{% url 'compras:solicitudes' %}">Solicitudes de compra</a></li>
+<li class="active"><a href="#">Cotizaciones</a></li>
 {% endblock miga_pan %}
+
+
+{% block titulo %}Gestión de Cotizaciones{% endblock titulo %}
+
+{% block titulo_pagina %}
+Solicitud de Compra #{{solicitud.id}}
+{% endblock titulo_pagina %}
+
 
 {% block contenido %}
 <div class="content-wrapper">
   <!-- Main content -->
-  <section class="box">          
+  <section class="box">
     <div class="col-md-12">
       <!-- general form elements -->
-      <div class="box box-primary">            
+      <div class="box box-primary">
         <!-- /.box-header -->
         <!-- form start -->
         <form role="form">
           <div class="box-body">
-            <!-- Panel colapsable --> 
-            <div class="container col-md-12">   
+            <!-- Panel colapsable -->
+            <div class="container col-md-12">
               <div class="form-group row">
                 <div class="col-xs-6">
                   <label for="inputNombre">Nombre</label>
-                  <input type="text" class="form-control" id="inputNombre" 
-                    placeholder={{usario.nombre}} disabled>
+                  <input type="text" class="form-control" id="inputNombre" value="{{usuario.get_full_name}}" disabled>
                 </div>
 
                 <div class="col-xs-3">
                   <label for="inputId">Identificación</label>
-                  <input type="text" class="form-control" id="inputId" disabled
-                    placeholder={{usuario.codigo}}>
+                  <input type="text" class="form-control" id="inputId" disabled value="{{usuario.username}}">
                 </div>
 
                 <div class="col-xs-3">
                   <label for="inputNombre">Cargo</label>
-                  <input type="text" class="form-control" id="inputNombre" disabled
-                    placeholder={{usuario.rol}}>
+                  <input type="text" class="form-control" id="inputNombre" disabled value="{{usuario.rol}}">
                 </div>
-              </div> 
-                            
+              </div>
+
               <div class="tab-content">
-                {% if cotizaciones %}
-                {% for cotizacion in cotizaciones %}
-                <div id="cotizaciones" class="tab-pane fade in active">                      
-                  <div class="panel-group" id="accordion">  
-                    <div class="panel panel-default">                                                                      
+                {% if object_list %}
+                {% for cotizacion in object_list %}
+                <div id="cotizaciones" class="tab-pane fade in active">
+                  <div class="panel-group" id="accordion">
+                    <div class="panel panel-default">
                       <div class="panel-heading">
-                        <h3 class="panel-title">Cotización #{{cotizacion.codigo}}</h3>                  
+                        <h3 class="panel-title">Cotización #{{cotizacion.codigo}}</h3>
                       </div>
 
                       <div class="form-group">
                         <div class="form-group row">
                           <div class="col-xs-6">
                             <label for="inputNombre">Nombre Proveedor</label>
-                            <input type="text" class="form-control" id="inputNombre" disabled
-                              value={{proveedor.nombre}}> 
+                            <input type="text" class="form-control" id="inputNombre" disabled value={{proveedor.nombre}}>
                           </div>
 
                           <div class="col-xs-3">
                             <label for="inputId">Identificación</label>
-                            <input type="text" class="form-control" id="inputId" disabled
-                              value={{proveedor.codigo}}>
-                          </div>                          
+                            <input type="text" class="form-control" id="inputId" disabled value={{proveedor.codigo}}>
+                          </div>
                         </div>
 
                         <div class="form-group">
                           <label for="inputElemento">Elemento</label>
-                          <input type="text" class="form-control" id="inputElemento" disabled
-                            value={{articuloscotizacion.articulo.nombre}}>
-                        </div>                        
+                          <input type="text" class="form-control" id="inputElemento" disabled value={{articuloscotizacion.articulo.nombre}}>
+                        </div>
 
                         <div class="form-group">
                           <label for="inputCantidad">Cantidad</label>
-                          <input type="text" class="form-control" id="inputCantidad" disabled
-                            value={{articuloscotizacion.cantidad}}>
+                          <input type="text" class="form-control" id="inputCantidad" disabled value={{articuloscotizacion.cantidad}}>
                         </div>
 
                         <div class="form-group row">
                           <div class="form-group col-xs-6">
-                            <label for="datepicker">Fecha realizada</label>                  
-                            <!-- Date -->                              
-                            <input type="text" class="form-control pull-right" id="datepicker" disabled
-                              value={{cotizacion.fecha_realizada}}>
+                            <label for="datepicker">Fecha realizada</label>
+                            <!-- Date -->
+                            <input type="text" class="form-control pull-right" id="datepicker" disabled value={{cotizacion.fecha_realizada}}>
                           </div>
                         </div> <!-- group row -->
 
-                        <div class="form-group row">                              
+                        <div class="form-group row">
                           <div class="form-group col-xs-6">
                             <label for="inputValorU">Valor unidad $</label>
-                            <input type="text" class="form-control" id="inputValorU" disabled
-                              value={{articuloscotizacion.precio}}>
-                          </div> 
+                            <input type="text" class="form-control" id="inputValorU" disabled value={{articuloscotizacion.precio}}>
+                          </div>
 
                           <div class="form-group col-xs-6">
-                            <label for="inputValorT">Valor Total $</label>       
-                            <input type="text" class="form-control pull-right" id="inputValorT" disabled
-                              value={{cotizacion.total}}>
-                          </div>                            
-                        </div> <!-- group row --> 
-                      </div> <!--collapse-->   
-                    </div> <!--panel-->
+                            <label for="inputValorT">Valor Total $</label>
+                            <input type="text" class="form-control pull-right" id="inputValorT" disabled value={{cotizacion.total}}>
+                          </div>
+                        </div> <!-- group row -->
+                      </div>
+                      <!--collapse-->
+                    </div>
+                    <!--panel-->
 
-                    <div class="box-footer text-center">
-                      <a href="{% url 'compras:cotizacion_crear' %}" class="btn btn-success">Nueva Cotización</a>
-                      <a href="{% url 'compras:cotizacion_modificar' %}" class="btn btn-primary">Modificar Cotización</a>                      
-                    </div> 
-                  </div> <!--accordion-->
-                {% endfor %}
-                {% else %}
+
+                  </div>
+                  <!--accordion-->
+                  {% endfor %}
+                  {% else %}
                   <h3>No hay cotizaciones</h3>
-                {% endif %}
-                </div>                                
-              </div> <!--tab content-->
+                  {% endif %}
+                  <div class="box-footer text-center">
+                    <a href="#" class="btn btn-success">Nueva Cotización</a>
+                  </div>
+                </div>
+              </div>
+              <!--tab content-->
             </div>
-          </div> <!-- /.box-body -->            
+          </div> <!-- /.box-body -->
         </form>
         <!-- /.box-body -->
       </div>
       <!-- /.box -->
-    </div>                  
+    </div>
   </section>
   <!-- /.content -->
 </div>
