--- a/templates/menu.html
+++ b/templates/menu.html
@@ -39,6 +39,8 @@
           </span>
         </a>
         <ul class="treeview-menu">
+          <li><a href="{% url 'createOrder'%}">Crear Ordenes</a></li>
+          <li><a href="{% url 'listServiceOrder'%}">Ver Ordenes</a></li>
           <li><a href="{% url 'listarCobrar'%}">Ver Cuentas</a></li>
         </ul>
       </li>      
