--- a/templates/cuentas/crearCuentaCobrar.html
+++ b/templates/cuentas/crearCuentaCobrar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% load bootstrap3 %}
-{% block titulo %} Crear Orden{% endblock titulo %}
+{% block titulo %} Crear Cuenta de Cobro{% endblock titulo %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css'%}">
@@ -9,14 +9,14 @@
 
 {% endblock css %}
 
-{% block titulo_pagina %} Nueva Orden de Servicio {% endblock titulo_pagina %}
+{% block titulo_pagina %} Nueva Cuenta de Cobro {% endblock titulo_pagina %}
 
 {% block miga_pan %}
 <li><a href="#">Orden de Servicio</a></li>
 <li class="active">Crear Orden</li>
 {% endblock miga_pan %}
 
-{% block titulo_panel %}<small>Datos de Orden</small>{% endblock titulo_panel %}
+{% block titulo_panel %}<small>Datos de Cuenta</small>{% endblock titulo_panel %}
 
 {% block contenido_panel %}
 
