--- a/templates/cuentas/listarCuentaCobrar.html
+++ b/templates/cuentas/listarCuentaCobrar.html
@@ -65,7 +65,7 @@
                                     {% endif %}
                                     {% if cuenta.estado == True %}
                                     <td style="text-align: center;">
-                                        <a href="#" style="color: red;" onclick="nullInvoice('{{cuenta.id}}')">
+                                        <a href="#" style="color: red;" onclick="cancellModal('{{cuenta.id}}')">
                                                 <i class="fas fa-ban fa-2x"></i>
                                             </a>
                                     </td>
@@ -90,7 +90,35 @@
         <!-- /.row -->
     </div>    
     <!-- /.container -->
+ <div class="modal" id="cancelle-account-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
 
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h2 class="modal-title" style="display: inline-block;">Confirme anulación de cuenta!</h2>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <h3 id="modal-title-cancelle"></h3>  
+                    <form method="POST" action="{% url 'anularCuenta' %}" id="cancelle-account-form">
+                        <!-- Token -->
+                        {% csrf_token %}
+                        <input type="hidden" name="account_id" id="form-account-id-1">
+                    </form>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-danger" form="cancelle-account-form">Anular Cuenta</button>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock contenido %}
 
@@ -117,7 +145,11 @@
             'autoWidth'   : false
           })
         })
-
+         function cancellModal(account_id){
+        $("#modal-title-cancelle").text("Desea Anular esta cuenta?");
+        $("#form-account-id-1").val(account_id);
+        $("#cancelle-account-modal").modal("show");
+    }
 
         function nullInvoice(id){
             $.ajax({
